root/apps/services/provisioner/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: { name: provisioner, namespace: platform }
spec:
  replicas: 1
  selector: { matchLabels: { app: provisioner } }
  template:
    metadata: { labels: { app: provisioner } }
    spec:
      containers:
        - name: provisioner
          image: rg.fr-par.scw.cloud/pandormedia/qoffice-provisioner:preprod-08ec3c0b7388c833cf342e400cd53fde0d47a35a
          ports: [ { containerPort: 8080 } ]
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 5
            timeoutSeconds: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 3
